--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 SESSION_SECRET=uka-random-key-for-cookies
 SMTP_PASSWORD=mbudffphjmrwxrux
 ADMIN_PASSWORD=admin123
+API_KEY=Tr1PR0ZahK4HSXiIggCAGi6U9V
+MERCHANT_ID=1026429
