feat(checkout): add payu_form.html to sent all the required data to PayU
- Modify HandleProcessPayment handler to pass the required data to the new form

- Modify items_description.go to pass a clean description for PayU

- Modify create_transaction.go eliminate special caracteres when create a reference code

- Add two new routes in main.go required by PayU

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SESSION_SECRET=uka-random-key-for-cookies
 SMTP_PASSWORD=mbudffphjmrwxrux
 ADMIN_PASSWORD=admin123
-API_KEY=Tr1PR0ZahK4HSXiIggCAGi6U9V
-MERCHANT_ID=1026429
+API_KEY=4Vj8eK4rloUd272L48hsrarnUA
+MERCHANT_ID=508029
+ACCOUNT_ID=512321
