--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ SESSION_SECRET=uka-random-key-for-cookies
 SMTP_PASSWORD=mbudffphjmrwxrux
 ADMIN_PASSWORD=admin123
 API_KEY=4Vj8eK4rloUd272L48hsrarnUA
+API_LOGIN=pRRXKOl8ikMmt9u
 MERCHANT_ID=508029
 ACCOUNT_ID=512321
+PAYU_ENV=sandbox
